--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ asttokens==2.0.5
 backcall==0.2.0
 bcrypt==3.2.0
 blinker==1.4
+boto3==1.22.11
+botocore==1.25.11
 cffi==1.15.0
 click==8.1.3
 decorator==5.1.1
@@ -13,12 +15,15 @@ Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.1
 greenlet==1.1.2
 idna==3.3
+importlib-metadata==4.11.3
 ipython==8.3.0
 itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
+jmespath==1.0.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
 parso==0.8.3
@@ -30,10 +35,15 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.12.0
+python-dateutil==2.8.2
 python-dotenv==0.20.0
+s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.36
 stack-data==0.2.0
 traitlets==5.2.0
+urllib3==1.26.9
 wcwidth==0.2.5
 Werkzeug==2.1.2
+WTForms==3.0.1
+zipp==3.8.0
