--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ executing==0.8.3
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-DebugToolbar==0.13.1
+Flask-JWT-Extended==4.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
 greenlet==1.1.2
@@ -35,6 +36,7 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.12.0
+PyJWT==2.3.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 s3transfer==0.5.2
