--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ bcrypt==3.2.0
 blinker==1.4
 boto3==1.22.11
 botocore==1.25.11
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.12
 click==8.1.3
 decorator==5.1.1
 dnspython==2.2.1
@@ -13,6 +15,7 @@ email-validator==1.2.1
 executing==0.8.3
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
+Flask-Cors==3.0.10
 Flask-DebugToolbar==0.13.1
 Flask-JWT-Extended==4.4.0
 Flask-SQLAlchemy==2.5.1
@@ -27,8 +30,11 @@ Jinja2==3.1.2
 jmespath==1.0.0
 MarkupSafe==2.1.1
 matplotlib-inline==0.1.3
+numpy==1.22.3
+pandas==1.4.2
 parso==0.8.3
 pexpect==4.8.0
+pgeocode==0.3.0
 pickleshare==0.7.5
 prompt-toolkit==3.0.29
 psycopg2-binary==2.9.3
@@ -39,6 +45,8 @@ Pygments==2.12.0
 PyJWT==2.3.0
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
+requests==2.27.1
 s3transfer==0.5.2
 six==1.16.0
 SQLAlchemy==1.4.36
