--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ SQLAlchemy==1.4.36
 stack-data==0.2.0
 traitlets==5.2.0
 urllib3==1.26.9
+uuid==1.30
 wcwidth==0.2.5
 Werkzeug==2.1.2
 WTForms==3.0.1
